{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 168,
  "lineage": "5f0af914-8c77-e3f9-e571-7ffb9d02bde7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0844ff648a31d352c",
            "association_id": "eipassoc-08457c26bd221ebc8",
            "domain": "vpc",
            "id": "eipalloc-0844ff648a31d352c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d3136dfbfec93033",
            "private_dns": "ip-10-0-0-188.us-west-2.compute.internal",
            "private_ip": "10.0.0.188",
            "public_dns": "ec2-100-21-71-146.us-west-2.compute.amazonaws.com",
            "public_ip": "100.21.71.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "NAT EIP",
              "Project": "project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:internet-gateway/igw-042d66ab3c3799868",
            "id": "igw-042d66ab3c3799868",
            "owner_id": "657114950082",
            "tags": {
              "Name": "custom-vpc-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-igw",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0844ff648a31d352c",
            "connectivity_type": "public",
            "id": "nat-01e00b91e0969e310",
            "network_interface_id": "eni-0d3136dfbfec93033",
            "private_ip": "10.0.0.188",
            "public_ip": "100.21.71.146",
            "subnet_id": "subnet-0293fad64b248d9ee",
            "tags": {
              "Name": "custom-vpc-nat-gw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-nat-gw",
              "Project": "project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:network-acl/acl-04ee1edc15d06eed5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-04ee1edc15d06eed5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "657114950082",
            "subnet_ids": [
              "subnet-0293fad64b248d9ee"
            ],
            "tags": {
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2a",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:network-acl/acl-0cd1e560f08107eb7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0cd1e560f08107eb7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "657114950082",
            "subnet_ids": [
              "subnet-0072c95c746e7756e"
            ],
            "tags": {
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2b",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:network-acl/acl-028f6fdae6a487104",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-028f6fdae6a487104",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "657114950082",
            "subnet_ids": [
              "subnet-0be1ea551770b476a"
            ],
            "tags": {
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2c",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:network-acl/acl-02c83affff3cee83e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-02c83affff3cee83e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "657114950082",
            "subnet_ids": [
              "subnet-0e458bdfae962a271"
            ],
            "tags": {
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2d"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-acl-custom-vpc-public-us-west-2d",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:route-table/rtb-0d01b99c4eafe446a",
            "id": "rtb-0d01b99c4eafe446a",
            "owner_id": "657114950082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01e00b91e0969e310",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-vpc-private-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-private-rt",
              "Project": "project"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:route-table/rtb-095da6fe8be82aab2",
            "id": "rtb-095da6fe8be82aab2",
            "owner_id": "657114950082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042d66ab3c3799868",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom-vpc-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-public-rt",
              "Project": "project"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6acd6afdb7ce3ae",
            "route_table_id": "rtb-0d01b99c4eafe446a",
            "subnet_id": "subnet-0b454270a47a9c594"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5536a1e1d6bc136",
            "route_table_id": "rtb-0d01b99c4eafe446a",
            "subnet_id": "subnet-06c4164ba439f23ee"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087aa15ee768a434b",
            "route_table_id": "rtb-0d01b99c4eafe446a",
            "subnet_id": "subnet-06ab42917f111dfb4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cabf7dbb70c484a",
            "route_table_id": "rtb-0d01b99c4eafe446a",
            "subnet_id": "subnet-0b9c4d2c5fcca0874"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e91e16f2faf1ec1",
            "route_table_id": "rtb-095da6fe8be82aab2",
            "subnet_id": "subnet-0293fad64b248d9ee"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f1b8a76bcc4b35a",
            "route_table_id": "rtb-095da6fe8be82aab2",
            "subnet_id": "subnet-0072c95c746e7756e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024e7f9d6028f7af7",
            "route_table_id": "rtb-095da6fe8be82aab2",
            "subnet_id": "subnet-0be1ea551770b476a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0365e731e94d88dab",
            "route_table_id": "rtb-095da6fe8be82aab2",
            "subnet_id": "subnet-0e458bdfae962a271"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0b454270a47a9c594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b454270a47a9c594",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-us-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-private-us-west-2a",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-06c4164ba439f23ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c4164ba439f23ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-us-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-private-us-west-2b",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-06ab42917f111dfb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ab42917f111dfb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-us-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-private-us-west-2c",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0b9c4d2c5fcca0874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c4d2c5fcca0874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-private-us-west-2d"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-private-us-west-2d",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0293fad64b248d9ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0293fad64b248d9ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-us-west-2a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-public-us-west-2a",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0072c95c746e7756e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0072c95c746e7756e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-us-west-2b"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-public-us-west-2b",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0be1ea551770b476a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be1ea551770b476a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-us-west-2c"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-public-us-west-2c",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-west-2d",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:subnet/subnet-0e458bdfae962a271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e458bdfae962a271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "657114950082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-vpc-public-us-west-2d"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc-public-us-west-2d",
              "Project": "project"
            },
            "vpc_id": "vpc-03f7fac948b8d6b41"
          },
          "dependencies": [
            "module.vpc.aws_vpc.custom_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:657114950082:vpc/vpc-03f7fac948b8d6b41",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08846367e0c2a17fc",
            "default_route_table_id": "rtb-0a5ce2394ec8a2e60",
            "default_security_group_id": "sg-0d0a6166cb0af35da",
            "dhcp_options_id": "dopt-0b78774cc71be5e1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03f7fac948b8d6b41",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5ce2394ec8a2e60",
            "owner_id": "657114950082",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "custom-vpc",
              "Project": "project"
            }
          }
        }
      ]
    }
  ]
}